# mu_action_agent

./: .env.example  .gitignore  README.md  SPEC.md  main.py  pyproject.toml  spec.md
.claude/: settings.json
.claude/commands/: commit.md  speckit.implement.md
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/app/: config.py  main.py  migrations.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: document_parser.py  market_data.py  news_analysis.py  report_generator.py  rights_analysis.py  valuation.py
backend/app/agents/prompts/: document_prompts.py  news_prompts.py  report_prompts.py  rights_prompts.py
backend/app/agents/tools/: address_converter.py  news_api.py  pdf_extractor.py  real_estate_api.py
backend/app/api/: router.py
backend/app/api/v1/: analyses.py  files.py
backend/app/api/websocket/: analyses.py  manager.py
backend/app/models/: __init__.py  analysis.py  file.py
backend/app/schemas/: analysis.py  document.py  file.py  market.py  news.py  rights.py  valuation.py
backend/tests/: conftest.py  test_task_00_infra.py  test_task_01_document_parser.py  test_task_02_rights_analysis.py  test_task_03_market_data.py  test_task_04_news_analysis.py  test_task_05_valuation.py  test_task_06_graph.py
docs/: PRD-00-system-overview.md  PRD-01-document-parser.md  PRD-02-rights-analysis.md  PRD-03-market-data.md  PRD-04-news-analysis.md  PRD-05-valuation-engine.md  PRD-06-ai-agent-system.md  PRD-07-backend-api.md  PRD-08-frontend.md
frontend/: package-lock.json
scripts/: start.sh
ui/: app.py
(+47 files in other folders)
